[gd_scene load_steps=11 format=3 uid="uid://8e2ey38722hg"]

[ext_resource type="Script" path="res://obstacles/laser/laser.gd" id="1_d4krq"]
[ext_resource type="Material" uid="uid://b2lmcghn41s75" path="res://obstacles/laser/laser_material.tres" id="2_47lgj"]

[sub_resource type="CylinderMesh" id="CylinderMesh_jiimv"]
top_radius = 0.03
bottom_radius = 0.03
height = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ie0li"]
transparency = 1
albedo_color = Color(0.87, 0.0725, 0, 1)
emission_enabled = true
emission = Color(0.866667, 0.0745098, 0, 1)
emission_energy_multiplier = 10.0

[sub_resource type="QuadMesh" id="QuadMesh_kgq6y"]
material = ExtResource("2_47lgj")
size = Vector2(0.02, 0.02)

[sub_resource type="Curve" id="Curve_qb4kp"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.253521, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_dkqjh"]
_data = [Vector2(0, 0.505494), 0.0, 0.0, 0, 0, Vector2(0.264706, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_d8fxi"]
curve = SubResource("Curve_dkqjh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3olqd"]
emission_shape = 3
emission_box_extents = Vector3(0.03, 0.1, 0.03)
direction = Vector3(0, 1, 0)
spread = 2.0
initial_velocity_min = 2.0
initial_velocity_max = 2.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_d8fxi")
collision_mode = 2

[sub_resource type="QuadMesh" id="QuadMesh_6smnr"]
size = Vector2(0.02, 0.02)

[node name="Laser" type="RayCast3D"]
exclude_parent = false
target_position = Vector3(0, 100, 0)
script = ExtResource("1_d4krq")

[node name="BeamMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_jiimv")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_ie0li")

[node name="HitParticles" type="CPUParticles3D" parent="."]
amount = 12
lifetime = 0.2
mesh = SubResource("QuadMesh_kgq6y")
spread = 80.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.5
initial_velocity_max = 1.0
scale_amount_curve = SubResource("Curve_qb4kp")

[node name="BeamParticles" type="GPUParticles3D" parent="."]
material_override = ExtResource("2_47lgj")
amount = 25
lifetime = 0.1
process_material = SubResource("ParticleProcessMaterial_3olqd")
draw_pass_1 = SubResource("QuadMesh_6smnr")
